--- a/classroom/src/app/header/header.component.html
+++ b/classroom/src/app/header/header.component.html
@@ -3,18 +3,24 @@
     <span>{{ title }} {{ institution }}</span>
     <span class="spacer"></span>
     <div class="assignment">
-      <div *ngIf="course" class="item" matTooltip="{{ course }}">
-        <div class="title">Course:</div>
-        <div id="course_name" class="value">{{ course }}</div>
-      </div>
-      <div *ngIf="assignment" class="item" matTooltip="{{ assignment }}">
-        <div class="title">Assignment:</div>
-        <div id="assignment_name" class="value">{{ assignment }}</div>
-      </div>
-      <div *ngIf="instructor" matTooltip="{{ instructor }}">
-        <div class="title">Instructor:</div>
-        <div id="instructor_name" class="value">{{ instructor }}</div>
-      </div>
+      @if (course) {
+        <div class="item" matTooltip="{{ course }}">
+          <div class="title">Course:</div>
+          <div id="course_name" class="value">{{ course }}</div>
+        </div>
+      }
+      @if (assignment) {
+        <div class="item" matTooltip="{{ assignment }}">
+          <div class="title">Assignment:</div>
+          <div id="assignment_name" class="value">{{ assignment }}</div>
+        </div>
+      }
+      @if (instructor) {
+        <div matTooltip="{{ instructor }}">
+          <div class="title">Instructor:</div>
+          <div id="instructor_name" class="value">{{ instructor }}</div>
+        </div>
+      }
     </div>
     <span class="spacer"></span>
     <button mat-icon-button (click)="openAbout()">
