--- a/classroom/src/app/about/about.component.scss
+++ b/classroom/src/app/about/about.component.scss
@@ -2,11 +2,11 @@
 @use '@angular/material' as mat;
 @import '../../cmu-app-theme.scss';
 
-$color-config: mat.get-color-config($cmu-theme);
+$color-config: mat.m2-get-color-config($cmu-theme);
 $primary-palette: map.get($color-config, 'primary');
 .header {
   text-align: center;
-  color: mat.get-color-from-palette($primary-palette, 900);
+  color: mat.m2-get-color-from-palette($primary-palette, 900);
 }
 
 .contrib {
