--- a/classroom/src/app/app.component.html
+++ b/classroom/src/app/app.component.html
@@ -4,8 +4,8 @@
 <main class="flex-grow-1">
   <router-outlet></router-outlet>
 </main>
-<ng-container *ngIf="loading$ | async">
+@if (loading$ | async) {
   <div class="overlay"></div>
   <h2 class="visually-hidden">Loading...</h2>
   <mat-progress-spinner [mode]="'indeterminate'"></mat-progress-spinner>
-</ng-container>
+}
