--- a/classroom/src/app/bubble-chart/bubble-chart.component.html
+++ b/classroom/src/app/bubble-chart/bubble-chart.component.html
@@ -1,93 +1,100 @@
-<mat-card appearance="outlined" *ngIf="corpus">
-  <mat-card-header>
-    <mat-card-title>Bubble Chart</mat-card-title>
-    <mat-card-subtitle>
-      Units are average number of instances per {{ unit }} words.
-    </mat-card-subtitle>
-    <mat-card-subtitle *ngIf="scale">
-      Scale:
-      <svg
-        [attr.width]="maxRadius * 7 + 'px'"
-        [attr.height]="maxRadius * 2 + 'px'"
-      >
-        <g *ngFor="let tick of scale.ticks(4).slice(1); index as i">
-          <circle
-            class="tick"
-            [attr.data-value]="tick"
-            [attr.cy]="maxRadius"
-            [attr.cx]="scale(tick) + legend_offset(i)"
-            [attr.r]="scale(tick)"
-          />
-          <text
-            class="tick"
-            [attr.y]="maxRadius"
-            [attr.x]="scale(tick) + legend_offset(i)"
-          >
-            {{ tick * unit }}
-          </text>
-        </g>
-      </svg>
-    </mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    <mat-label>Level to display:</mat-label>
-    <mat-button-toggle-group [(value)]="depth">
-      <mat-button-toggle value="Category">Category</mat-button-toggle>
-      <mat-button-toggle value="Subcategory">Subcategory</mat-button-toggle>
-      <mat-button-toggle value="Cluster">Cluster</mat-button-toggle>
-    </mat-button-toggle-group>
-    <table
-      mat-table
-      *ngIf="data && dictionary"
-      matSort
-      #documentSort="matSort"
-      [dataSource]="tableData"
-    >
-      <ng-container matColumnDef="title" sticky>
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let doc">
-          <a
-            [ngClass]="{
-              name_entry: true,
-              model_entry: doc.ownedby === 'instructor'
-            }"
-            [routerLink]="'/stv/' + doc.id"
-            rel="noreferrer noopener"
-            target="_blank"
-            matTooltip="{{ doc.title }}"
-          >
-            {{ doc.title }}
-          </a>
-        </td>
-      </ng-container>
-
-      <ng-container
-        *ngFor="let category of dictionary.nodes"
-        matColumnDef="{{ category.name ?? category.label }}"
-      >
-        <th
-          mat-header-cell
-          *matHeaderCellDef
-          class="bubble-col bubble-col-header"
+@if (corpus) {
+  <mat-card appearance="outlined">
+    <mat-card-header>
+      <mat-card-title>Bubble Chart</mat-card-title>
+      <mat-card-subtitle>
+        Units are average number of instances per {{ unit }} words.
+      </mat-card-subtitle>
+      <mat-card-subtitle>
+        Scale:
+        <svg
+          [attr.width]="maxRadius * 7 + 'px'"
+          [attr.height]="maxRadius * 2 + 'px'"
         >
-          <span matTooltip="{{ category.path }}" matTooltipPosition="above">{{
-            category.label
-          }}</span>
-        </th>
-        <td mat-cell *matCellDef="let doc" class="bubble-col">
-          <ng-container
-            [ngTemplateOutlet]="bubble"
-            [ngTemplateOutletContext]="{ cell: getCell(doc, category) }"
-          >
+          @for (tick of scale.ticks(4).slice(1); track tick; let i = $index) {
+            <g>
+              <circle
+                class="tick"
+                [attr.data-value]="tick"
+                [attr.cy]="maxRadius"
+                [attr.cx]="scale(tick) + legend_offset(i)"
+                [attr.r]="scale(tick)"
+              />
+              <text
+                class="tick"
+                [attr.y]="maxRadius"
+                [attr.x]="scale(tick) + legend_offset(i)"
+              >
+                {{ tick * unit }}
+              </text>
+            </g>
+          }
+        </svg>
+      </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-label>Level to display:</mat-label>
+      <mat-button-toggle-group [(value)]="depth">
+        <mat-button-toggle value="Category">Category</mat-button-toggle>
+        <mat-button-toggle value="Subcategory">Subcategory</mat-button-toggle>
+        <mat-button-toggle value="Cluster">Cluster</mat-button-toggle>
+      </mat-button-toggle-group>
+      @if (data && dictionary) {
+        <table
+          mat-table
+          matSort
+          #documentSort="matSort"
+          [dataSource]="tableData"
+        >
+          <ng-container matColumnDef="title" sticky>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+            <td mat-cell *matCellDef="let doc">
+              <a
+                [ngClass]="{
+                  name_entry: true,
+                  model_entry: doc.ownedby === 'instructor'
+                }"
+                [routerLink]="'/stv/' + doc.id"
+                rel="noreferrer noopener"
+                target="_blank"
+                matTooltip="{{ doc.title }}"
+              >
+                {{ doc.title }}
+              </a>
+            </td>
           </ng-container>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="columns; sticky: stickyHeader"></tr>
-      <tr mat-row *matRowDef="let row; columns: columns"></tr>
-    </table>
-  </mat-card-content>
-</mat-card>
+          @for (category of dictionary.nodes; track category) {
+            <ng-container matColumnDef="{{ category.name ?? category.label }}">
+              <th
+                mat-header-cell
+                *matHeaderCellDef
+                class="bubble-col bubble-col-header"
+              >
+                <span
+                  matTooltip="{{ category.path }}"
+                  matTooltipPosition="above"
+                  >{{ category.label }}</span
+                >
+              </th>
+              <td mat-cell *matCellDef="let doc" class="bubble-col">
+                <ng-container
+                  [ngTemplateOutlet]="bubble"
+                  [ngTemplateOutletContext]="{ cell: getCell(doc, category) }"
+                >
+                </ng-container>
+              </td>
+            </ng-container>
+          }
+          <tr
+            mat-header-row
+            *matHeaderRowDef="columns; sticky: stickyHeader"
+          ></tr>
+          <tr mat-row *matRowDef="let row; columns: columns"></tr>
+        </table>
+      }
+    </mat-card-content>
+  </mat-card>
+}
 <ng-template #bubble let-cell="cell">
   <svg
     [attr.width]="maxRadius * 2 + 'px'"
