--- a/classroom/src/app/compare-patterns-table/compare-patterns-table.component.html
+++ b/classroom/src/app/compare-patterns-table/compare-patterns-table.component.html
@@ -1,38 +1,41 @@
-<table
-  *ngIf="pattern_data"
-  mat-table
-  matSort
-  #pattern_table
-  #patternTableSort="matSort"
-  [dataSource]="pattern_data"
-  matSortDisableClear
->
-  <ng-container matColumnDef="pattern">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Pattern</th>
-    <td mat-cell *matCellDef="let row">{{ row.pattern }}</td>
-  </ng-container>
-  <ng-container matColumnDef="count">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Count</th>
-    <td mat-cell *matCellDef="let row">{{ row.count }}</td>
-  </ng-container>
-  <ng-container matColumnDef="count0">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-      <mat-icon [style.color]="left_color">assignment</mat-icon>
-    </th>
-    <td mat-cell *matCellDef="let row">
-      <span class="col-align" [style.color]="left_color">{{ row.count0 }}</span>
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="count1">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-      <mat-icon [style.color]="right_color">assignment</mat-icon>
-    </th>
-    <td mat-cell *matCellDef="let row">
-      <span class="col-align" [style.color]="right_color">{{
-        row.count1
-      }}</span>
-    </td>
-  </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayColumns; sticky: true"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
-</table>
+@if (pattern_data) {
+  <table
+    mat-table
+    matSort
+    #pattern_table
+    #patternTableSort="matSort"
+    [dataSource]="pattern_data"
+    matSortDisableClear
+  >
+    <ng-container matColumnDef="pattern">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pattern</th>
+      <td mat-cell *matCellDef="let row">{{ row.pattern }}</td>
+    </ng-container>
+    <ng-container matColumnDef="count">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Count</th>
+      <td mat-cell *matCellDef="let row">{{ row.count }}</td>
+    </ng-container>
+    <ng-container matColumnDef="count0">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <mat-icon [style.color]="left_color">assignment</mat-icon>
+      </th>
+      <td mat-cell *matCellDef="let row">
+        <span class="col-align" [style.color]="left_color">{{
+          row.count0
+        }}</span>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="count1">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        <mat-icon [style.color]="right_color">assignment</mat-icon>
+      </th>
+      <td mat-cell *matCellDef="let row">
+        <span class="col-align" [style.color]="right_color">{{
+          row.count1
+        }}</span>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
+  </table>
+}
