--- a/classroom/src/app/layouts/tool-layout/tool-layout.component.html
+++ b/classroom/src/app/layouts/tool-layout/tool-layout.component.html
@@ -51,28 +51,30 @@
         matTooltip="Show Categorized Patterns"
         >Patterns</a
       >
-      <a
-        mat-tab-link
-        *ngIf="is_instructor()"
-        routerLink="/groups"
-        queryParamsHandling="preserve"
-        routerLinkActive
-        #grla="routerLinkActive"
-        [active]="grla.isActive"
-        matTooltip="Generate Groups"
-        >Groups</a
-      >
-      <a
-        mat-tab-link
-        *ngIf="is_instructor()"
-        routerLink="/report"
-        queryParamsHandling="preserve"
-        routerLinkActive
-        #rla="routerLinkActive"
-        [active]="rla.isActive"
-        matTooltip="Generate Reports"
-        >Reports</a
-      >
+      @if (is_instructor()) {
+        <a
+          mat-tab-link
+          routerLink="/groups"
+          queryParamsHandling="preserve"
+          routerLinkActive
+          #grla="routerLinkActive"
+          [active]="grla.isActive"
+          matTooltip="Generate Groups"
+          >Groups</a
+        >
+      }
+      @if (is_instructor()) {
+        <a
+          mat-tab-link
+          routerLink="/report"
+          queryParamsHandling="preserve"
+          routerLinkActive
+          #rla="routerLinkActive"
+          [active]="rla.isActive"
+          matTooltip="Generate Reports"
+          >Reports</a
+        >
+      }
     </nav>
     <article class="container">
       <mat-tab-nav-panel #tabPanel>
